WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
16590
Solaris OS compile fix
https://bugs.webkit.org/show_bug.cgi?id=16590
Summary
Solaris OS compile fix
Holger Freyther
Reported
2007-12-23 15:29:41 PST
kjs currently does not compile on Solaris OS. We have fix from Adrian de Groot in the QtWebkit branch, this patch is also in the KDE version of kjs.
Attachments
Solaris Compile fix from Adrian de Groot
(2.88 KB, patch)
2007-12-23 15:30 PST
,
Holger Freyther
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Holger Freyther
Comment 1
2007-12-23 15:30:48 PST
Created
attachment 18080
[details]
Solaris Compile fix from Adrian de Groot Compile fix for Solaris OS and non GNU compilers.
Eric Seidel (no email)
Comment 2
2007-12-23 16:58:45 PST
Comment on
attachment 18080
[details]
Solaris Compile fix from Adrian de Groot Looks fine. strange that: isinf would use one NaN test and isfinite would use a different one. Perhaps we should fix that before landing. !isNan() is clearer.
Maciej Stachowiak
Comment 3
2007-12-25 14:49:28 PST
It would be better if these were written as inline functions, not #defines: +#if PLATFORM(SOLARIS_OS) && COMPILER(GCC) +#include <ieeefp.h> +#if !defined(isfinite) +#define isfinite(x) (finite(x) && !isnand(x)) +#endif +#if !defined(isinf) +#define isinf(x) (!finite(x) && (x == x)) +#endif +#if !defined(signbit) +#define signbit(x) (x < 0.0) +#endif +#endif + Please fix when landing.
Mark Rowe (bdash)
Comment 4
2008-01-03 00:35:06 PST
Does SOLARIS_OS need the _OS suffix? The reason for the _OS suffix on WIN is to distinguish between the base platform and the higher-level APIs. Does Solaris also refer to a higher-level environment to which WebKit may one day be ported? My understanding was that it runs X with GNOME, thus the Gtk or Qt ports would provide this higher layer.
Darin Adler
Comment 5
2008-01-13 11:48:42 PST
Committed revision 29454. I considered all the comments in this bug. The implementation of signbit is definitely incorrect, so I added a FIXME.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug